[metadata]
name = licensecheck
version = 2021.1.1
description = Output the licenses used by dependencies and check if these are compatible with the project license
author_name = FredHappyface
classifiers =
	Environment :: Console
	Environment :: MacOS X
	Environment :: Win32 (MS Windows)
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Education
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Security
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities
homepage = https://github.com/FHPythonUtils/LicenseCheck
long_description = file: README.md

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires = 
	requirements-parser >=0.2.0
	requests >=2.24.0
	pip >=20.2.3
	tomlkit >=0.7.0

[options.extras_require]
full = metprint >=2020.7

[options.entry_points]
console_scripts =
	licensecheck = licensecheck:cli
